--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+      - name: env
       - name: GitHub login
         run: echo "$GITHUB_TOKEN" | docker login docker.pkg.github.com -u "$GITHUB_ACTOR" --password-stdin
         env:
