--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - name: env
+        run: env
       - name: GitHub login
         run: echo "$GITHUB_TOKEN" | docker login docker.pkg.github.com -u "$GITHUB_ACTOR" --password-stdin
         env:
