--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -11,7 +11,8 @@ jobs:
         uses: actions/checkout@v1
       - name: env
         run: env
-      - name: GitHub login
-        run: echo "$GITHUB_TOKEN" | docker login docker.pkg.github.com -u "$GITHUB_REPOSITORY" --password-stdin
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Docker image
+        run: |
+          IMAGE_DATE=$(date +%s)
+          docker build --pull --tag docker.pkg.github.com/tomkins/ci-tox:$IMAGE_DATE .
+          docker push docker.pkg.github.com/tomkins/ci-tox:$IMAGE_DATE
