--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -11,6 +11,12 @@ jobs:
         uses: actions/checkout@v1
       - name: env
         run: env
+      - name: GitHub login
+        run: |
+          env
+          echo "$GITHUB_TOKEN" | docker login docker.pkg.github.com -u "$GITHUB_ACTOR" --password-stdin
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Docker image
         run: |
           IMAGE_DATE=$(date +%s)
