--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -13,6 +13,7 @@ jobs:
         run: env
       - name: GitHub login
         run: |
+          uname -a
           uptime
           env
           docker login docker.pkg.github.com -u "$GITHUB_ACTOR" -p "$GITHUB_TOKEN"
