--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -11,14 +11,11 @@ jobs:
         uses: actions/checkout@v1
       - name: GitHub login
         run: |
-          uname -a
-          uptime
-          env
           docker login docker.pkg.github.com -u "$GITHUB_ACTOR" -p "$GITHUB_TOKEN"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Docker image
         run: |
           IMAGE_DATE=$(date +%s)
-          docker build --pull --tag docker.pkg.github.com/tomkins/ci-tox:$IMAGE_DATE .
-          docker push docker.pkg.github.com/tomkins/ci-tox:$IMAGE_DATE
+          docker build --pull --tag docker.pkg.github.com/tomkins/ci-tox/xenial:$IMAGE_DATE .
+          docker push docker.pkg.github.com/tomkins/ci-tox/xenial:$IMAGE_DATE
