--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Build Docker image
         run: |
           IMAGE_DATE=$(date --utc +%Y%m%dT%H%M%SZ)
-          docker build --pull --tag docker.pkg.github.com/tomkins/ci-tox/xenial:$IMAGE_DATE .
+          docker build --pull \
+            --tag docker.pkg.github.com/tomkins/ci-tox/xenial:$IMAGE_DATE \
+            --tag docker.pkg.github.com/tomkins/ci-tox/xenial:latest .
           docker push docker.pkg.github.com/tomkins/ci-tox/xenial:$IMAGE_DATE
+          docker push docker.pkg.github.com/tomkins/ci-tox/xenial:latest
