--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,13 +15,11 @@ jobs:
           uptime
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Fetch latest Docker image
-        run: |
-          docker pull --quiet docker.pkg.github.com/tomkins/ci-tox/xenial || true
       - name: Build Docker image
         run: |
           IMAGE_DATE=$(date --utc +%Y%m%dT%H%M%SZ)
           docker build --pull \
+            --cache-from docker.pkg.github.com/tomkins/ci-tox/xenial:latest2 \
             --tag docker.pkg.github.com/tomkins/ci-tox/xenial:$IMAGE_DATE \
             --tag docker.pkg.github.com/tomkins/ci-tox/xenial:latest .
           docker push docker.pkg.github.com/tomkins/ci-tox/xenial:$IMAGE_DATE
