--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -12,7 +12,7 @@ jobs:
       - name: GitHub login
         run: |
           docker login docker.pkg.github.com -u "$GITHUB_ACTOR" -p "$GITHUB_TOKEN"
-          uptime
+          uname -a
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Docker image
