--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,6 +15,10 @@ jobs:
           uname -a
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Fetch latest Docker image
+        run: |
+          docker pull --quiet docker.pkg.github.com/tomkins/ci-tox/xenial || true
+          docker images -a
       - name: Build Docker image
         run: |
           IMAGE_DATE=$(date --utc +%Y%m%dT%H%M%SZ)
